unpackaged/main/default/objects/abc__c/abc__c.object-meta.xml
<CustomObject>
    <label>abc</label>
    <nameField>
        <label>abc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>abc</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>