unpackaged/main/default/objects/abc__c/fields/Account_picklist__c.field-meta.xml
<CustomField>
    <fullName>Account_picklist__c</fullName>
    <label>Account picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Potentiel Véhicule Frigorifique</fullName>
            </value>
            <value>
                <fullName>Potentiel Véhicule Sec</fullName>
            </value>
            <value>
                <fullName>Potentiel Meuble</fullName>
            </value>
            <value>
                <fullName>Potentiel Container</fullName>
            </value>
            <value>
                <fullName>Terminer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>