unpackaged/main/default/objects/abc__c/fields/Flow_Service_Nature__c.field-meta.xml
<CustomField>
    <fullName>Flow_Service_Nature__c</fullName>
    <label>Flow_Service_Nature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dépannage</fullName>
            </value>
            <value>
                <fullName>Demande de service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>