unpackaged/main/default/objects/abc__c/fields/Flow_Service_Organe__c.field-meta.xml
<CustomField>
    <fullName>Flow_Service_Organe__c</fullName>
    <label>Organe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabine</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Groupe</fullName>
            </value>
            <value>
                <fullName>Pneumatique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>