unpackaged/main/default/objects/abc__c/fields/Flow_Service_Origine__c.field-meta.xml
<CustomField>
    <fullName>Flow_Service_Origine__c</fullName>
    <label>Flow_Service_Origine</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Atelier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>