unpackaged/main/default/objects/abc__c/fields/Service_Nature__c.field-meta.xml
<CustomField>
    <fullName>Service_Nature__c</fullName>
    <label>Service Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dépannage</fullName>
            </value>
            <value>
                <fullName>Demande de service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>